--- a/kalenteri/package.json
+++ b/kalenteri/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "@syncfusion/ej2-angular-navigations": "^17.4.43",
     "@syncfusion/ej2-angular-schedule": "^17.4.43",
     "bootstrap": "^4.4.1",
     "cldr-data": "^36.0.0",
