--- a/kalenteri/package.json
+++ b/kalenteri/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "@syncfusion/ej2-angular-navigations": "^17.4.43",
     "@syncfusion/ej2-angular-schedule": "^17.4.43",
     "bootstrap": "^4.4.1",
+    "cldr-data": "^36.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -43,6 +45,7 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
+    "systemjs-plugin-json": "0.3.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
   }
