--- a/kalenteri/package.json
+++ b/kalenteri/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.5",
     "@syncfusion/ej2-angular-navigations": "^17.4.43",
     "@syncfusion/ej2-angular-schedule": "^17.4.43",
+    "@syncfusion/ej2-angular-grids": "^17.4.44",
     "bootstrap": "^4.4.1",
     "cldr-data": "^36.0.0",
     "rxjs": "~6.4.0",
