--- a/Lintukoto-sovellus/kalenteri/tsconfig.json
+++ b/Lintukoto-sovellus/kalenteri/tsconfig.json
@@ -1,4 +1,5 @@
 {
+	"includes":"./src/app/aktiiviset-kurssit",
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
@@ -12,7 +13,7 @@
     "importHelpers": true,
     "target": "es2015",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2018", "dom"]
+    "lib": ["es2018", "dom"],
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
