--- a/Lintukoto-sovellus/package.json
+++ b/Lintukoto-sovellus/package.json
@@ -23,7 +23,6 @@
     "@syncfusion/ej2-angular-schedule": "^17.4.43",
     "@syncfusion/ej2-angular-grids": "^17.4.44",
     "bootstrap": "^4.4.1",
-    "cldr-data": "^36.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -45,8 +44,9 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
+    "prettier": "^1.19.1",
     "systemjs-plugin-json": "0.3.0",
+    "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
   }
