--- a/Lintukoto-sovellus/package.json
+++ b/Lintukoto-sovellus/package.json
@@ -19,11 +19,14 @@
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "@syncfusion/ej2-angular-grids": "^17.4.44",
     "@syncfusion/ej2-angular-navigations": "^17.4.43",
     "@syncfusion/ej2-angular-schedule": "^17.4.43",
-    "@syncfusion/ej2-angular-grids": "^17.4.44",
+    "angular-in-memory-web-api": "^0.9.0",
+    "auth0-js": "^9.12.2",
     "bootstrap": "^4.4.1",
     "cldr-data": "^36.0.0",
+    "msal": "^1.2.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
