korjattu pilkkuvirhe ja hipsut yksinkertaisiksi

--- a/Lintukoto-sovellus/package.json
+++ b/Lintukoto-sovellus/package.json
@@ -20,11 +20,8 @@
     "@angular/compiler": "~8.2.5",
     "@angular/core": "~8.2.5",
     "@angular/forms": "~8.2.5",
+    "@angular/http": "^2.1.2",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.5",
-    "@angular/platform-browser-dynamic": "~8.2.5",
-    "@angular/router": "~8.2.5",
-    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
@@ -36,6 +33,7 @@
     "cldr-data": "^36.0.0",
     "ng-bootstrap": "^1.6.3",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
