--- a/Lintukoto-palvelin/package.json
+++ b/Lintukoto-palvelin/package.json
@@ -17,11 +17,14 @@
   "author": "Juho Tuomainen",
   "license": "MIT",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
     "@types/mongoose": "^5.7.1",
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.10"
   }
