--- a/Lintukoto-palvelin/package.json
+++ b/Lintukoto-palvelin/package.json
@@ -20,7 +20,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
     "@types/mongoose": "^5.7.1",
-    "bcrypt": "^3.0.8",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
