--- a/Lintukoto-sovellus/package.json
+++ b/Lintukoto-sovellus/package.json
@@ -34,6 +34,7 @@
     "auth0-js": "^9.12.2",
     "bootstrap": "^4.4.1",
     "cldr-data": "^36.0.0",
+    "hammerjs": "^2.0.8",
     "msal": "^1.2.1",
     "ng-bootstrap": "^1.6.3",
     "rxjs": "~6.4.0",
